# antrian-kpp

./: .gitignore  CLAUDE.md  README.md  build-release.bat  config.yaml  go.mod  go.sum  main.go
.claude/: settings.local.json
cmd/print-agent/: agent.go  config.go  config.yaml  main.go
internal/config/: config.go
internal/database/: database.go
internal/handlers/: handlers.go
internal/models/: models.go
internal/printer/: printer.go
internal/sse/: hub.go
tauri-counter/: build.bat  installer-hooks.nsi  package-lock.json  package.json  start.bat
tauri-counter/src/: index.html
tauri-counter/src-tauri/: Cargo.toml  tauri.conf.json
tauri-counter/src-tauri/src/: main.rs
tauri-display/: build.bat  local-tts.js  package-lock.json  package.json  start.bat
tauri-display/audio/: README.md
tauri-display/src/: index.html
tauri-display/src-tauri/: Cargo.toml  tauri.conf.json
tauri-display/src-tauri/capabilities/: default.json
tauri-display/src-tauri/js/: main-injection.js
tauri-display/src-tauri/src/: main.rs
tauri-display/src-tauri/web/: error.html
tauri-ticket/: build.bat  package-lock.json  package.json  start.bat
tauri-ticket/src/: index.html
tauri-ticket/src-tauri/: Cargo.toml  tauri.conf.json
tauri-ticket/src-tauri/src/: main.rs  printer-selector.js
web/static/css/: admin.css  counter.css  super-counter.css  ticket.css
web/static/js/: admin.js  display.js  super-counter.js
web/templates/: admin.html  admin_login.html  counter.html  super_counter.html  ticket.html
